fixed flexbox overflow on top of the canvas

--- a/swc/swc-vision-simulator/vision-sim.css
+++ b/swc/swc-vision-simulator/vision-sim.css
@@ -40,14 +40,15 @@
 
 #controls {
     margin-bottom: 1em;
-    height: 2em;
+    height: auto;
+    width: 100%;
 }
 
 #controls > * {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 2em;
     line-height: 2em;
     text-align: center;
     margin: 0;
@@ -59,21 +60,21 @@
     padding: 0 1em 0 1em;
 }
 
-#controls > .slider {
+#controls .slider {
     appearance: none;
     background: none;
     cursor: pointer;
 }
 
-#controls > .slider::-webkit-slider-runnable-track,
-#controls > .slider::-moz-range-track {
+#controls .slider::-webkit-slider-runnable-track,
+#controls .slider::-moz-range-track {
     background: var(--white-backdrop);
     height: 0.35em;
     border-radius: 0.4em;
 }
 
-#controls > .slider::-webkit-slider-thumb,
-#controls > .slider::-moz-range-thumb {
+#controls .slider::-webkit-slider-thumb,
+#controls .slider::-moz-range-thumb {
     appearance: none;
     height: 85%;
     width: 0.6em;
@@ -81,8 +82,12 @@
     border-radius: 0.15em;
 }
 
-#controls > .slider:hover::-webkit-slider-thumb,
-#controls > .slider:hover::-moz-range-thumb {
+#controls .slider:hover::-webkit-slider-thumb,
+#controls .slider:hover::-moz-range-thumb {
     background-color: var(--white);
     transition: background-color 0.2s ease;
+}
+
+.range-container {
+    gap: 0.25em;
 }
